# rag-sql-agent

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
config/: settings.yaml
config/prompts/: explainer.yaml  router.yaml  schema_rag.yaml  sql_generator.yaml  validation.yaml
docs/: architecture.md
scripts/: __init__.py  build_index.py  seed_db.py
src/: __init__.py  main.py
src/agents/: __init__.py  access_control.py  base.py  explainer.py  orchestrator.py  router.py  schema_rag.py  sql_generator.py  validation.py
src/core/: __init__.py  config.py  database.py  llm.py  logging.py  schema_store.py
src/ui/: __init__.py  app.py
tests/: __init__.py  conftest.py  test_access_control.py  test_agents.py  test_config.py  test_database.py  test_llm.py  test_orchestrator.py  test_validation.py
